components/karakeep/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-ingress
  namespace: karakeep
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Certificate manager annotations
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - karakeep.donovanlowkeen.com
      secretName: karakeep-tls
  rules:
    - host: karakeep.donovanlowkeen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  number: 3000
